--- a/Shop_03_multiProduct/Web.config
+++ b/Shop_03_multiProduct/Web.config
@@ -53,6 +53,32 @@
     </staticContent>
     <rewrite>
       <rules>
+        <!--policy-->
+        <rule name="aboutRule" stopProcessing="true">
+          <match url="^about$"/>          
+          <action type="Rewrite" url="home/policy?type=1"/>
+        </rule>
+        <rule name="ShipPolicyRule" stopProcessing="true">
+          <match url="^shippolicy"/>
+          <action type="Rewrite" url="home/policy?type=2"/>
+        </rule>
+        <rule name="WarrantyPolicy" stopProcessing="true">
+          <match url="^WarrantyPolicy"/>
+          <action type="Rewrite" url="home/policy?type=3"/>
+        </rule>
+        <rule name="ProductReturnPolicy" stopProcessing="true">
+          <match url="^ProductReturnPolicy"/>
+          <action type="Rewrite" url="home/policy?type=4"/>
+        </rule>
+        <rule name="PrivacyPolicy" stopProcessing="true">
+          <match url="^PrivacyPolicy"/>
+          <action type="Rewrite" url="home/policy?type=5"/>
+        </rule>
+        <rule name="PaymentInfo" stopProcessing="true">
+          <match url="^PaymentInfo"/>
+          <action type="Rewrite" url="home/policy?type=6"/>
+        </rule>
+        <!--end policy-->
         <rule name="Article" stopProcessing="true">
           <match url="^([^/]+)-a(\d+)$"/>
           <conditions>
@@ -61,6 +87,7 @@
           </conditions>
           <action type="Rewrite" url="article/index?id={R:2}"/>
         </rule>
+        
         <rule name="category" stopProcessing="true">
           <match url="^([^/]+)/(\d+)?$"/>
           <conditions>
