--- a/Shop_02_Onepage/Web.config
+++ b/Shop_02_Onepage/Web.config
@@ -52,6 +52,32 @@
     </staticContent>
     <rewrite>
       <rules>
+        <!--policy-->
+        <rule name="aboutRule" stopProcessing="true">
+          <match url="^about$"/>
+          <action type="Rewrite" url="home/policy?type=1"/>
+        </rule>
+        <rule name="ShipPolicyRule" stopProcessing="true">
+          <match url="^shippolicy"/>
+          <action type="Rewrite" url="home/policy?type=2"/>
+        </rule>
+        <rule name="WarrantyPolicy" stopProcessing="true">
+          <match url="^WarrantyPolicy"/>
+          <action type="Rewrite" url="home/policy?type=3"/>
+        </rule>
+        <rule name="ProductReturnPolicy" stopProcessing="true">
+          <match url="^ProductReturnPolicy"/>
+          <action type="Rewrite" url="home/policy?type=4"/>
+        </rule>
+        <rule name="PrivacyPolicy" stopProcessing="true">
+          <match url="^PrivacyPolicy"/>
+          <action type="Rewrite" url="home/policy?type=5"/>
+        </rule>
+        <rule name="PaymentInfo" stopProcessing="true">
+          <match url="^PaymentInfo"/>
+          <action type="Rewrite" url="home/policy?type=6"/>
+        </rule>
+        <!--end policy-->
         <rule name="Article" stopProcessing="true">
           <match url="^([^/]+)-a(\d+)$"/>
           <conditions>
