--- a/Shop_03_multiProduct/05_Shop_MultiProduct.csproj
+++ b/Shop_03_multiProduct/05_Shop_MultiProduct.csproj
@@ -313,6 +313,7 @@
     <Content Include="Views\Shared\_partial\_MainHeader_2.cshtml" />
     <Content Include="Views\Shared\product\_productDetail.cshtml" />
     <Content Include="Views\Shared\_partial\_MainFooter_1.cshtml" />
+    <Content Include="Views\Home\Policy.cshtml" />
     <None Include="Web References\WebService\AnperoService.disco" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -419,7 +420,7 @@
     <VisualStudio>
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
-          <UseIIS>True</UseIIS>
+          <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>32561</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
