--- a/Shop_02_Onepage/06_Shop_OnePage.csproj
+++ b/Shop_02_Onepage/06_Shop_OnePage.csproj
@@ -159,7 +159,7 @@
     <Content Include="assets\fonts\icofont.svg" />
     <Content Include="assets\fonts\Stroke-Gap-Icons.svg" />
     <Content Include="assets\images\455x480.png" />
-    <Content Include="assets\images\about-img.png" />
+    <Content Include="assets\images\about.jpg" />
     <Content Include="assets\images\apple-touch-icon.png" />
     <Content Include="assets\images\blog-1.jpg" />
     <Content Include="assets\images\blog-2.jpg" />
