--- a/Shop_03_multiProduct/05_Shop_MultiProduct.csproj
+++ b/Shop_03_multiProduct/05_Shop_MultiProduct.csproj
@@ -145,6 +145,16 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="assets\js\countdown\countdownBasic.html" />
+    <Content Include="assets\js\countdown\countdownGlowing.gif" />
+    <Content Include="assets\js\countdown\countdownLED.png" />
+    <Content Include="assets\js\countdown\jquery.countdown-es.js" />
+    <Content Include="assets\js\countdown\jquery.countdown-vi.js" />
+    <Content Include="assets\js\countdown\jquery.countdown.css" />
+    <Content Include="assets\js\countdown\jquery.countdown.js" />
+    <Content Include="assets\js\countdown\jquery.countdown.min.js" />
+    <Content Include="assets\js\countdown\jquery.plugin.js" />
+    <Content Include="assets\js\countdown\jquery.plugin.min.js" />
     <Content Include="assets\fonts\fontawesome-webfont.svg" />
     <Content Include="assets\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="assets\fonts\site-icons.svg" />
