--- a/Shop_03_multiProduct/05_Shop_MultiProduct.csproj
+++ b/Shop_03_multiProduct/05_Shop_MultiProduct.csproj
@@ -254,6 +254,16 @@
     <Content Include="assets\js\bootstrap.min.js" />
     <Content Include="assets\js\cloud-zoom.js" />
     <Content Include="assets\js\common.js" />
+    <Content Include="assets\js\countdown\countdownBasic.html" />
+    <Content Include="assets\js\countdown\countdownGlowing.gif" />
+    <Content Include="assets\js\countdown\countdownLED.png" />
+    <Content Include="assets\js\countdown\jquery.countdown-es.js" />
+    <Content Include="assets\js\countdown\jquery.countdown-vi.js" />
+    <Content Include="assets\js\countdown\jquery.countdown.css" />
+    <Content Include="assets\js\countdown\jquery.countdown.js" />
+    <Content Include="assets\js\countdown\jquery.countdown.min.js" />
+    <Content Include="assets\js\countdown\jquery.plugin.js" />
+    <Content Include="assets\js\countdown\jquery.plugin.min.js" />
     <Content Include="assets\js\jquery.bxslider.min.js" />
     <Content Include="assets\js\jquery.flexslider.js" />
     <Content Include="assets\js\jquery.min.js" />
@@ -270,6 +280,7 @@
     <Content Include="assets\stylesheet\owl.carousel.css" />
     <Content Include="assets\stylesheet\owl.theme.css" />
     <Content Include="assets\stylesheet\responsive.css" />
+    <Content Include="assets\stylesheet\revslider-v2.css" />
     <Content Include="assets\stylesheet\revslider.css" />
     <Content Include="assets\stylesheet\style.css" />
     <Content Include="favicon.ico" />
@@ -313,6 +324,7 @@
     <Content Include="Views\Shared\_partial\_MainHeader_2.cshtml" />
     <Content Include="Views\Shared\product\_productDetail.cshtml" />
     <Content Include="Views\Shared\_partial\_MainFooter_1.cshtml" />
+    <Content Include="Views\Home\Policy.cshtml" />
     <None Include="Web References\WebService\AnperoService.disco" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
