--- a/Shop_03_multiProduct/Web.config
+++ b/Shop_03_multiProduct/Web.config
@@ -16,9 +16,10 @@
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
     <add key="shortCacheTime" value="5"/>
-    <!--29|f7991f45-6bdf-442c-9b00-404ef4555834-->
-    <add key="storeID" value="36"/>
-    <add key="storeTokenKey" value="8df53b26-5504-49ca-b816-a340761c3f76"/>
+    <!--36|8df53b26-5504-49ca-b816-a340761c3f76-->
+    <add key="storeID" value="39"/>    
+    <add key="storeTokenKey" value="78ab1081-55bf-4fa0-9262-fbb4c8b0a3c4"/>
+  
   </appSettings> 
   <system.web>
     <authentication mode="None"/>
@@ -53,6 +54,32 @@
     </staticContent>
     <rewrite>
       <rules>
+        <!--policy-->
+        <rule name="aboutRule" stopProcessing="true">
+          <match url="^about$"/>          
+          <action type="Rewrite" url="home/policy?type=1"/>
+        </rule>
+        <rule name="ShipPolicyRule" stopProcessing="true">
+          <match url="^shippolicy"/>
+          <action type="Rewrite" url="home/policy?type=2"/>
+        </rule>
+        <rule name="WarrantyPolicy" stopProcessing="true">
+          <match url="^WarrantyPolicy"/>
+          <action type="Rewrite" url="home/policy?type=3"/>
+        </rule>
+        <rule name="ProductReturnPolicy" stopProcessing="true">
+          <match url="^ProductReturnPolicy"/>
+          <action type="Rewrite" url="home/policy?type=4"/>
+        </rule>
+        <rule name="PrivacyPolicy" stopProcessing="true">
+          <match url="^PrivacyPolicy"/>
+          <action type="Rewrite" url="home/policy?type=5"/>
+        </rule>
+        <rule name="PaymentInfo" stopProcessing="true">
+          <match url="^PaymentInfo"/>
+          <action type="Rewrite" url="home/policy?type=6"/>
+        </rule>
+        <!--end policy-->
         <rule name="Article" stopProcessing="true">
           <match url="^([^/]+)-a(\d+)$"/>
           <conditions>
@@ -61,6 +88,7 @@
           </conditions>
           <action type="Rewrite" url="article/index?id={R:2}"/>
         </rule>
+        
         <rule name="category" stopProcessing="true">
           <match url="^([^/]+)/(\d+)?$"/>
           <conditions>
