--- a/Shop_01_multiProduct/04_Shop_MultiProduct.csproj
+++ b/Shop_01_multiProduct/04_Shop_MultiProduct.csproj
@@ -317,6 +317,7 @@
     <Content Include="assets\data\m8.jpg" />
     <Content Include="assets\data\men.png" />
     <Content Include="assets\data\next-slider.png" />
+    <Content Include="assets\data\nganluong.PNG" />
     <Content Include="assets\data\option3\adv1.jpg" />
     <Content Include="assets\data\option3\adv2.jpg" />
     <Content Include="assets\data\option3\adv3.jpg" />
@@ -663,6 +664,7 @@
     <Content Include="assets\data\sub-cat3.jpg" />
     <Content Include="assets\data\sub-cat4.jpg" />
     <Content Include="assets\data\t.jpg" />
+    <Content Include="assets\data\Techcombank_logo.jpg" />
     <Content Include="assets\data\testimonial.jpg" />
     <Content Include="assets\data\trademark-cn.jpg" />
     <Content Include="assets\data\trademark-dhl.jpg" />
