--- a/Shop_01_multiProduct/04_Shop_MultiProduct.csproj
+++ b/Shop_01_multiProduct/04_Shop_MultiProduct.csproj
@@ -275,6 +275,7 @@
     <Content Include="assets\data\icon-s5.png" />
     <Content Include="assets\data\icon-s6.png" />
     <Content Include="assets\data\icon-sports.png" />
+    <Content Include="assets\images\275px.jpg" />
     <Content Include="assets\data\introduce-logo.png" />
     <Content Include="assets\data\jewelry-slide.jpg" />
     <Content Include="assets\data\jewelry.png" />
@@ -695,6 +696,7 @@
     <Content Include="assets\fonts\fontello.svg" />
     <Content Include="assets\images\384x135.jpg" />
     <Content Include="assets\images\384x157.jpg" />
+    <Content Include="assets\images\862.jpg" />
     <Content Include="assets\images\add-cart.png" />
     <Content Include="assets\images\banchay.png" />
     <Content Include="assets\images\bar.png" />
@@ -726,6 +728,7 @@
     <Content Include="assets\images\footer-logo2.png" />
     <Content Include="assets\images\fr.jpg" />
     <Content Include="assets\images\grid-view-bg.png" />
+    <Content Include="assets\images\headerBg.jpg" />
     <Content Include="assets\images\heart-icon.png" />
     <Content Include="assets\images\heart.png" />
     <Content Include="assets\images\icon-angle-right.png" />
