--- a/02_BDS_BatDongSan_MultiLand/Web.config
+++ b/02_BDS_BatDongSan_MultiLand/Web.config
@@ -17,10 +17,11 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
     <add key="shortCacheTime" value="5"/>
     <!--vulongland-->
-    <!--<add key="storeID" value="27" />
-    <add key="storeTokenKey" value="33d49a3d-a5cb-4933-a705-bff24158e500" />-->
     <add key="storeID" value="27" />
     <add key="storeTokenKey" value="33d49a3d-a5cb-4933-a705-bff24158e500" />
+    <!--ngoai giao doan-->
+   <!--<add key="storeID" value="35" />
+    <add key="storeTokenKey" value="4310be99-db17-4c7c-8d63-56a1bf4025b8" />-->
   </appSettings> 
   <system.web>
     <authentication mode="None"/>
@@ -29,7 +30,7 @@
         <remove assembly="Microsoft.VisualStudio.Web.PageInspector.Loader, Version=1.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a"/>
       </assemblies>
     </compilation>
-    <customErrors defaultRedirect="~/" mode="On">
+    <customErrors defaultRedirect="~/" mode="Off">
       <error statusCode="404" redirect="~/404.htm"/>
       <error statusCode="500" redirect="~/500.htm"/>
     </customErrors>
