--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,10 @@ Shop_07_MultiProduct/obj/
 01_BDS_BatDongSan_MultiLand/bin/Microsoft.Web.Infrastructure.dll
 01_BDS_BatDongSan_MultiLand/bin/Antlr3.Runtime.dll
 01_BDS_BatDongSan_MultiLand/bin/Anpero.dll
+04_Shop_multiProduct/obj/
+07_Shop_MultiProduct/bin/
+04_Shop_multiProduct/bin/
+01_BDS_BatDongSan_MultiLand/obj/
+02_BDS_BatDongSan_MultiLand/obj/
+03_HR_Service_Frontend/obj/
+06_Shop_Onepage/obj/
