--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,4 @@ Shop_07_MultiProduct/obj/
 01_BDS_BatDongSan_MultiLand/bin/Microsoft.Web.Infrastructure.dll
 01_BDS_BatDongSan_MultiLand/bin/Antlr3.Runtime.dll
 01_BDS_BatDongSan_MultiLand/bin/Anpero.dll
+07_Shop_MultiProduct/obj/Debug/07_Shop_MultiProduct.csproj.FileListAbsolute.txt
