--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,7 @@ Shop_07_MultiProduct/obj/
 03_HR_Service_Frontend/obj/
 06_Shop_Onepage/obj/
 07_Shop_MultiProduct/obj/
+05_Shop_MultiProduct/bin/
+06_Shop_Onepage/bin/
+08_Shop_MultiProduct/bin/
+08_Shop_MultiProduct/obj/
