--- a/05_Shop_MultiProduct/05_Shop_MultiProduct.csproj
+++ b/05_Shop_MultiProduct/05_Shop_MultiProduct.csproj
@@ -284,6 +284,7 @@
     <Content Include="assets\stylesheet\style.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
+    <Content Include="google74aa5e953cbe528c.html" />
     <Content Include="handler\ProductHandler.ashx" />
     <Content Include="assets\fonts\clhLqOv7MXn459PTh0gXYHW1xglZCgocDnD_teV2lMU.woff" />
     <Content Include="assets\fonts\fontawesome-webfont.eot" />
