--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,40 @@ Shop_07_MultiProduct/obj/
 01_BDS_BatDongSan_MultiLand/bin/Microsoft.Web.Infrastructure.dll
 01_BDS_BatDongSan_MultiLand/bin/Antlr3.Runtime.dll
 01_BDS_BatDongSan_MultiLand/bin/Anpero.dll
+08_Shop_MultiProduct/obj/Debug/AnperoFrontend.dll
+08_Shop_MultiProduct/obj/Debug/08_Shop_MultiProduct.csprojResolveAssemblyReference.cache
+08_Shop_MultiProduct/obj/Debug/08_Shop_MultiProduct.csproj.FileListAbsolute.txt
+08_Shop_MultiProduct/bin/Antlr3.Runtime.pdb
+08_Shop_MultiProduct/bin/AnperoFrontend.pdb
+08_Shop_MultiProduct/bin/AnperoFrontend.dll
+08_Shop_MultiProduct/obj/Debug/AnperoFrontend.pdb
+04_Shop_multiProduct/obj/Debug/04_Shop_MultiProduct.csprojResolveAssemblyReference.cache
+04_Shop_multiProduct/bin/Antlr3.Runtime.pdb
+04_Shop_multiProduct/bin/AnperoFrontend.pdb
+04_Shop_multiProduct/bin/AnperoFrontend.dll
+04_Shop_multiProduct/bin/Anpero.pdb
+03_HR_Service_Frontend/obj/Debug/build.force
+02_BDS_BatDongSan_MultiLand/obj/Debug/build.force
+01_BDS_BatDongSan_MultiLand/obj/Debug/build.force
+07_Shop_MultiProduct/obj/Debug/07_Shop_MultiProduct.csprojResolveAssemblyReference.cache
+07_Shop_MultiProduct/obj/Debug/07_Shop_MultiProduct.csproj.FileListAbsolute.txt
+07_Shop_MultiProduct/bin/Antlr3.Runtime.pdb
+07_Shop_MultiProduct/bin/AnperoFrontend.pdb
+07_Shop_MultiProduct/bin/AnperoFrontend.dll
+06_Shop_Onepage/obj/Debug/AnperoFrontend.dll
+06_Shop_Onepage/obj/Debug/06_Shop_OnePage.csprojResolveAssemblyReference.cache
+06_Shop_Onepage/bin/Antlr3.Runtime.pdb
+06_Shop_Onepage/bin/AnperoFrontend.pdb
+06_Shop_Onepage/bin/AnperoFrontend.dll
+06_Shop_Onepage/bin/Anpero.pdb
+05_Shop_MultiProduct/bin/Antlr3.Runtime.pdb
+07_Shop_MultiProduct/obj/Debug/AnperoFrontend.pdb
+07_Shop_MultiProduct/obj/Debug/AnperoFrontend.dll
+08_Shop_MultiProduct/bin/Anpero.pdb
+07_Shop_MultiProduct/bin/Anpero.pdb
+06_Shop_Onepage/obj/Debug/AnperoFrontend.pdb
+05_Shop_MultiProduct/bin/AnperoFrontend.pdb
+05_Shop_MultiProduct/bin/AnperoFrontend.dll
+05_Shop_MultiProduct/bin/Anpero.pdb
+04_Shop_multiProduct/obj/Debug/AnperoFrontend.pdb
+04_Shop_multiProduct/obj/Debug/AnperoFrontend.dll
