--- a/04_Shop_multiProduct/04_Shop_MultiProduct.csproj
+++ b/04_Shop_multiProduct/04_Shop_MultiProduct.csproj
@@ -121,6 +121,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\APIController.cs" />
     <Compile Include="Controllers\ArticleController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -147,6 +148,7 @@
   <ItemGroup>
     <Content Include="assets\checkout.html" />
     <Content Include="assets\css\animate.css" />
+    <Content Include="assets\css\NganLuongBankList.css" />
     <Content Include="assets\css\option2.css" />
     <Content Include="assets\css\option3.css" />
     <Content Include="assets\css\option4.css" />
@@ -942,6 +944,7 @@
     <Content Include="Views\Shared\_partial\_MainHeader_1.cshtml" />
     <Content Include="Views\Shared\_partial\_MainHeader_2.cshtml" />
     <Content Include="Views\Shared\product\_productDetail.cshtml" />
+    <Content Include="Views\API\Index.cshtml" />
     <None Include="Web References\WebService\AnperoService.disco" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
