--- a/09_Shop_MultiProduct/Web.config
+++ b/09_Shop_MultiProduct/Web.config
@@ -16,9 +16,8 @@
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
     <add key="shortCacheTime" value="5"/>
-    <!--29|f7991f45-6bdf-442c-9b00-404ef4555834-->
-    <add key="storeID" value="44"/>
-    <add key="storeTokenKey" value="ca5b0f39-673a-4853-9e02-275ea529d64b"/>
+    <add key="storeID" value="45"/>
+    <add key="storeTokenKey" value="64c42dba-c7f2-4990-9e5a-3e2369fe6176"/>
   </appSettings> 
   <system.web>
     <authentication mode="None"/>
@@ -111,6 +110,14 @@
             <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true"/>
           </conditions>
           <action type="Rewrite" url="product/ParentCategory?id={R:2}"/>
+        </rule>
+        <rule name="GroupProduct" stopProcessing="true">
+          <match url="^([^/]+)-g(\d+)?$"/>
+          <conditions>
+            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true"/>
+            <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true"/>
+          </conditions>
+          <action type="Rewrite" url="product/Group?id={R:2}"/>
         </rule>
         <rule name="Search_rw" stopProcessing="true">
           <match url="^search$"/>
