--- a/.gitignore
+++ b/.gitignore
@@ -219,3 +219,4 @@ Shop_07_MultiProduct/obj/
 .vs/AnperoWeb/v15/Server/sqlite3/storage.ide-shm
 .vs/AnperoWeb/v15/Server/sqlite3/storage.ide
 .vs/AnperoWeb/v15/Server/sqlite3/db.lock
+09_Shop_MultiProduct/obj/
