--- a/04_Shop_multiProduct/Web.config
+++ b/04_Shop_multiProduct/Web.config
@@ -55,7 +55,15 @@
       <mimeMap fileExtension=".ttf" mimeType="application/font-ttf"/>
     </staticContent>
     <rewrite>
-      <rules>
+      <rules>        
+        <rule name="chuyendoitiengviet" stopProcessing="true">
+          <match url="^chuyen-doi-tieng-viet$"/>
+          <conditions>
+            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true"/>
+            <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true"/>
+          </conditions>
+          <action type="Rewrite" url="article/chuyendoitiengviet"/>
+        </rule>
         <rule name="Article" stopProcessing="true">
           <match url="^([^/]+)-a(\d+)$"/>
           <conditions>
