--- a/.gitignore
+++ b/.gitignore
@@ -220,3 +220,4 @@ Shop_07_MultiProduct/obj/
 .vs/AnperoWeb/v15/Server/sqlite3/storage.ide
 .vs/AnperoWeb/v15/Server/sqlite3/db.lock
 09_Shop_MultiProduct/obj/
+10_Theme_09_v2/obj/
