fix shopping cart all theme

--- a/10_Theme_09_v2/10_Theme_09_v2.csproj
+++ b/10_Theme_09_v2/10_Theme_09_v2.csproj
@@ -298,6 +298,9 @@
     <Content Include="assets\fonts\site-icons.eot" />
     <Content Include="assets\fonts\site-icons.ttf" />
     <Content Include="assets\fonts\site-icons.woff" />
+    <Content Include="assets\fonts\sfufuturabook_0-webfont.ttf" />
+    <Content Include="assets\fonts\sfufuturabook_0-webfont.woff" />
+    <Content Include="assets\fonts\sfufuturabook_0-webfont.woff2" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
