--- a/06_Shop_Onepage/06_Shop_OnePage.csproj
+++ b/06_Shop_Onepage/06_Shop_OnePage.csproj
@@ -172,6 +172,7 @@
     <Content Include="assets\images\close.png" />
     <Content Include="assets\images\contact-bg.jpg" />
     <Content Include="assets\images\dangky.gif" />
+    <Content Include="assets\images\dev.jpg" />
     <Content Include="assets\images\discover-bg.jpg" />
     <Content Include="assets\images\favicon.ico" />
     <Content Include="assets\images\folio-1.jpg" />
@@ -212,6 +213,7 @@
     <Content Include="assets\images\slide-4.jpg" />
     <Content Include="assets\images\slide2.jpg" />
     <Content Include="assets\images\slide3.png" />
+    <Content Include="assets\images\webDs.PNG" />
     <Content Include="assets\js\ajaxchimp.js" />
     <Content Include="assets\js\bootstrap-min.js" />
     <Content Include="assets\js\contact-form.js" />
