--- a/10_Theme_09_v2/10_Theme_09_v2.csproj
+++ b/10_Theme_09_v2/10_Theme_09_v2.csproj
@@ -146,6 +146,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="assets\images\loading.gif" />
     <Content Include="assets\js\countdown\countdownBasic.html" />
     <Content Include="assets\js\countdown\countdownGlowing.gif" />
     <Content Include="assets\js\countdown\countdownLED.png" />
