udpate theme bds 02

--- a/02_BDS_BatDongSan_MultiLand/Web.config
+++ b/02_BDS_BatDongSan_MultiLand/Web.config
@@ -19,6 +19,7 @@
     <!--vulongland-->
     <add key="storeID" value="43" />
     <add key="storeTokenKey" value="f262670c-31dc-462a-89f6-58127fb58748" />
+     <add key="CustomArticleId" value="95"/>
     <!--ngoai giao doan-->
    <!--<add key="storeID" value="35" />
     <add key="storeTokenKey" value="4310be99-db17-4c7c-8d63-56a1bf4025b8" />-->
@@ -30,7 +31,7 @@
         <remove assembly="Microsoft.VisualStudio.Web.PageInspector.Loader, Version=1.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a"/>
       </assemblies>
     </compilation>
-    <customErrors defaultRedirect="~/" mode="Off">
+    <customErrors defaultRedirect="~/" mode="On">
       <error statusCode="404" redirect="~/404.htm"/>
       <error statusCode="500" redirect="~/500.htm"/>
     </customErrors>
