--- a/11_Company_Info/bin/AnperoFrontend.dll.config
+++ b/11_Company_Info/bin/AnperoFrontend.dll.config
@@ -17,12 +17,11 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
     <add key="shortCacheTime" value="5"/>
     <!--vulongland-->
-    <add key="storeID" value="27" />
-    <add key="storeTokenKey" value="33d49a3d-a5cb-4933-a705-bff24158e500" />
-     <add key="CustomArticleId" value="95"/>
-    <!--ngoai giao doan-->
-   <!--<add key="storeID" value="35" />
-    <add key="storeTokenKey" value="4310be99-db17-4c7c-8d63-56a1bf4025b8" />-->
+    <add key="storeID" value="46" />
+    <add key="storeTokenKey" value="9d9e2be3-c984-4dfe-961b-0fe9d287ee1c" />
+     <add key="Customproduct01" value="433"/>
+    <add key="Customproduct02" value="196"/>
+  
   </appSettings> 
   <system.web>
     <authentication mode="None"/>
