--- a/11_Company_Info/Web.config
+++ b/11_Company_Info/Web.config
@@ -30,7 +30,7 @@
         <remove assembly="Microsoft.VisualStudio.Web.PageInspector.Loader, Version=1.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a"/>
       </assemblies>
     </compilation>
-    <customErrors defaultRedirect="~/" mode="On">
+    <customErrors defaultRedirect="~/" mode="Off">
       <error statusCode="404" redirect="~/404.htm"/>
       <error statusCode="500" redirect="~/500.htm"/>
     </customErrors>
