--- a/.gitignore
+++ b/.gitignore
@@ -221,3 +221,4 @@ Shop_07_MultiProduct/obj/
 .vs/AnperoWeb/v15/Server/sqlite3/db.lock
 09_Shop_MultiProduct/obj/
 10_Theme_09_v2/obj/
+11_Company_Info/obj/
