update shopping cart

--- a/02_BDS_BatDongSan_MultiLand/02_BatDongSan_MultiLand.csproj
+++ b/02_BDS_BatDongSan_MultiLand/02_BatDongSan_MultiLand.csproj
@@ -997,6 +997,9 @@
     <Content Include="Web References\WebService\Location.datasource">
       <DependentUpon>Reference.map</DependentUpon>
     </Content>
+    <Content Include="Web References\WebService\PaymentConfig.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </Content>
     <None Include="Web References\WebService\Reference.map">
       <Generator>MSDiscoCodeGenerator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
