--- a/04_Shop_multiProduct/04_Shop_MultiProduct.csproj
+++ b/04_Shop_multiProduct/04_Shop_MultiProduct.csproj
@@ -930,7 +930,7 @@
     </None>
     <Content Include="Robots.txt" />
     <Content Include="Scripts\Anpero.Common.js" />
-    <Content Include="Scripts\Bootrap.notify.js" />
+    <Content Include="Scripts\Bootrap-notify.js" />
     <Content Include="Scripts\jquery.cokie.min.js" />
     <Content Include="Scripts\ChuyenDoiTiengViet.js" />
     <Content Include="Scripts\ShoppingCart.js" />
