--- a/Anpero/Anpero.csproj
+++ b/Anpero/Anpero.csproj
@@ -51,6 +51,8 @@
     <Compile Include="Constant.cs" />
     <Compile Include="Paging.cs" />
     <Compile Include="PaymentApi\NganLuong\APICheckoutV3.cs" />
+    <Compile Include="PaymentMethod\PaymentMethod.cs" />
+    <Compile Include="PaymentMethod\PaymentMethodControl.cs" />
     <Compile Include="SearchResult.cs" />
     <Compile Include="StringHelpper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
