--- a/04_Shop_multiProduct/Web.config
+++ b/04_Shop_multiProduct/Web.config
@@ -41,6 +41,7 @@
       <remove name="FormsAuthentication"/>
     </modules>
     <staticContent>
+      <clientCache cacheControlCustom="public" cacheControlMode="UseMaxAge" cacheControlMaxAge="365.00:00:00" />
       <remove fileExtension=".svg"/>
       <remove fileExtension=".eot"/>
       <remove fileExtension=".woff"/>
