update shopping cart
update

--- a/09_Shop_MultiProduct/09_Shop_MultiProduct.csproj
+++ b/09_Shop_MultiProduct/09_Shop_MultiProduct.csproj
@@ -298,6 +298,7 @@
     <Content Include="assets\fonts\site-icons.eot" />
     <Content Include="assets\fonts\site-icons.ttf" />
     <Content Include="assets\fonts\site-icons.woff" />
+    <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
