--- a/04_Shop_multiProduct/Web.config
+++ b/04_Shop_multiProduct/Web.config
@@ -19,10 +19,10 @@
     <!--<add key="storeID" value="34" />
     <add key="storeTokenKey" value="0d115ff6-dbfb-4da2-868f-3538d01073c5" />-->
     <!--dothethao-->
-     
+
     <add key="storeID" value="40"/>
     <add key="storeTokenKey" value="7c319753-f605-48dc-afa7-4659486e2c43"/>
-  </appSettings> 
+  </appSettings>
   <system.web>
     <authentication mode="None"/>
     <compilation debug="true" targetFramework="4.5.2">
@@ -55,124 +55,83 @@
       <mimeMap fileExtension=".woff2" mimeType="font/woff2"/>
       <mimeMap fileExtension=".ttf" mimeType="application/font-ttf"/>
     </staticContent>
-    <rewrite>
+    <!--<rewrite>
       <rules>
-            <!--policy-->
-        <rule name="aboutRule" stopProcessing="true">
-          <match url="^about$"/>          
-          <action type="Rewrite" url="home/policy?type=1"/>
-        </rule>
-        <rule name="ShipPolicyRule" stopProcessing="true">
-          <match url="^shippolicy"/>
-          <action type="Rewrite" url="home/policy?type=2"/>
-        </rule>
-        <rule name="WarrantyPolicy" stopProcessing="true">
-          <match url="^WarrantyPolicy"/>
-          <action type="Rewrite" url="home/policy?type=3"/>
-        </rule>
-        <rule name="ProductReturnPolicy" stopProcessing="true">
-          <match url="^ProductReturnPolicy"/>
-          <action type="Rewrite" url="home/policy?type=4"/>
-        </rule>
-        <rule name="PrivacyPolicy" stopProcessing="true">
-          <match url="^PrivacyPolicy"/>
-          <action type="Rewrite" url="home/policy?type=5"/>
-        </rule>
-        <rule name="PaymentInfo" stopProcessing="true">
-          <match url="^PaymentInfo"/>
-          <action type="Rewrite" url="home/policy?type=6"/>
-        </rule>
-        <!--end policy-->
-        <rule name="chuyendoitiengviet" stopProcessing="true">
-          <match url="^chuyen-doi-tieng-viet$"/>
-          <conditions>
-            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true"/>
-            <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true"/>
-          </conditions>
-          <action type="Rewrite" url="article/chuyendoitiengviet"/>
-        </rule>
-        <rule name="Article" stopProcessing="true">
-          <match url="^([^/]+)-a(\d+)$"/>
-          <conditions>
-            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true"/>
-            <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true"/>
-          </conditions>
-          <action type="Rewrite" url="article/index?id={R:2}"/>
-        </rule>
-        <rule name="category" stopProcessing="true">
+     
+        --><!--<rule name="category" stopProcessing="true">
           <match url="^([^/]+)/(\d+)?$"/>
           <conditions>
             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true"/>
             <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true"/>
           </conditions>
           <action type="Rewrite" url="product/category?id={R:2}"/>
-        </rule>
-        <rule name="category2" stopProcessing="true">
+        </rule>--><!--
+        --><!--<rule name="category2" stopProcessing="true">
           <match url="^([^/]+)-cat(\d+)?$"/>
           <conditions>
             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true"/>
             <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true"/>
           </conditions>
           <action type="Rewrite" url="product/category?id={R:2}"/>
-        </rule>
-        <rule name="ParentCategory" stopProcessing="true">
+        </rule>--><!--
+        --><!--<rule name="ParentCategory" stopProcessing="true">
           <match url="^([^/]+)-c(\d+)?$"/>
           <conditions>
             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true"/>
             <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true"/>
           </conditions>
           <action type="Rewrite" url="product/ParentCategory?id={R:2}"/>
-        </rule>
-        <rule name="Search_rw" stopProcessing="true">
+        </rule>--><!--
+        --><!--<rule name="Search_rw" stopProcessing="true">
           <match url="^search$"/>
           <conditions>
             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true"/>
             <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true"/>
           </conditions>
           <action type="Rewrite" url="product/search"/>
-        </rule>
-        <rule name="productDetail" stopProcessing="true">
+        </rule>--><!--
+        --><!--<rule name="productDetail" stopProcessing="true">
           <match url="^([^/]+)-p(\d+)?$"/>
           <conditions>
             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true"/>
             <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true"/>
           </conditions>
           <action type="Rewrite" url="product?id={R:2}"/>
-        </rule>
-        <rule name="blogList" stopProcessing="true">
+        </rule>--><!--
+        --><!--<rule name="blogList" stopProcessing="true">
           <match url="^([^/]+)-b(\d+)?$"/>
           <conditions>
             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true"/>
             <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true"/>
           </conditions>
           <action type="Rewrite" url="Article/Category?id={R:2}"/>
-        </rule>
-        <rule name="blogList3" stopProcessing="true">
+        </rule>--><!--
+        --><!--<rule name="blogList3" stopProcessing="true">
           <match url="^blog/([^/]+)-b(\d+)?$"/>
           <conditions>
             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true"/>
             <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true"/>
           </conditions>
           <action type="Rewrite" url="Article/Category?id={R:2}"/>
-        </rule>
-        <rule name="blogList2" stopProcessing="true">
+        </rule>--><!--
+        --><!--<rule name="blogList2" stopProcessing="true">
           <match url="^blog$"/>
           <conditions>
             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true"/>
             <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true"/>
           </conditions>
           <action type="Rewrite" url="Article/Category?id=0"/>
-        </rule>
-        <rule name="CheckOut" stopProcessing="true">
+        </rule>--><!--
+        --><!--<rule name="CheckOut" stopProcessing="true">
           <match url="^checkout"/>
           <conditions>
             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true"/>
             <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true"/>
           </conditions>
           <action type="Rewrite" url="product/checkout"/>
-        </rule>
+        </rule>--><!--
       </rules>
-    </rewrite>
+    </rewrite>-->
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
